fix: solves overflow y issue on both mobile and tab view caused by the navbar

--- a/src/app/components/navigation/navigation.component.css
+++ b/src/app/components/navigation/navigation.component.css
@@ -111,14 +111,15 @@ header{
   }
 
   .menu{
-    position: absolute;
-    right: -350px;
+    position: fixed;
+    right: -300px;
     top: 44px;
     width: 280px;
     height: auto;
     background-color: #222;
     transition: .4s ease-in-out;
     z-index: 999;
+    overflow-x: hidden !important;
   }
 
   .menu ul li{
@@ -215,7 +216,7 @@ header{
   }
 
   .menu{
-    position: absolute;
+    position: fixed;
     right: -280px;
     top: 50px;
     width: 280px;
@@ -223,6 +224,7 @@ header{
     background-color: #222;
     transition: .4s ease-in-out;
     z-index: 999;
+    overflow-x: hidden !important;
   }
 
   .menu ul li{
