--- a/src/styles.css
+++ b/src/styles.css
@@ -33,3 +33,14 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 }
+
+@media only screen and (max-width: 500px) {
+  body,html{
+    height:auto;
+    overflow-x: hidden;
+    overflow-y: auto;
+    margin: 0;
+    padding: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+}
